sass/all.scss
@import "pure-min.scss";

* {
	font-family: 'Roboto','Helvetica Neue',Helvetica,arial,freesans,clean,sans-serif;
}
html, body {
	color:#dedede;
	width: 100%;
	height: 100%;
	max-height: 100%;
	max-width: 100%;
}
body {
	background:url('../img/noisy_net.png') repeat;
}

.flashy { width: 100%; height: 100%;}
.flashy canvas { width: 100% !important; height: 100% !important; }
.flashy-header {
	position: absolute;
	z-index: 3;
	top: 50%;
	right: 0;
	width: 100%;
	font-size: 4em;
	text-align: center;
	color: #daf6f5;
	font-family: 'Unica One','Roboto','Helvetica Neue',Helvetica,arial,freesans,clean,sans-serif;
	text-shadow: 1px 1px 0px #0c1d1c;
}
.flashy-logo {
	width:180px;
	height:180px;
	max-width:180px;
	max-height:180px;
	position: absolute;
	top: 50%;
	margin-top: -200px;
	left: 50%;
	margin-left: -90px;
}

.content.pure-g-r {
	position: relative;
	top: -36px; // shift it upwards
}

@mixin transition($value) {
	-webkit-transition: $value;
	-moz-transition: $value;
	-ms-transition: $value;
	-o-transition: $value;
	transition: $value;
}
@mixin transform($value) {
	-webkit-transform: $value;
	-moz-transform: $value;
	-ms-transform: $value;
	-o-transform: $value;
	transform: $value;
}
@mixin box-sizing($value) {
	-moz-box-sizing: $value;
	-webkit-box-sizing: $value;
	-ms-box-sizing: $value;
	-o-box-sizing: $value;
	box-sizing: $value;
}

h1,h2,h3,h4,h5 {
	text-shadow:-1px -1px 0 #111;
}

.callout {
	@include transition(all 0.25s ease-in-out);
	position: relative;
	padding:2em;
	text-align: justify;

	@include box-sizing(border-box);
	height:420px;
	width: 100%;

	display: block;

	i {
		@include transition(all 0.25s ease-in-out);
		width:100%;
		font-size:1000%;
		text-align: center;
		display:block;
	}
	h2 {
		margin:0.5em 0 0 0;
		display: block;
		text-align: center;
		font-size: 200%;
		font-variant: italic;
		text-shadow:-1px -1px 0px black;
	}
	p {
		font-size:0.9em;
		text-align: justify;
	}
	a.call-to-action {
		@include transition(all 0.25s ease-in-out);
		opacity: 0;
		position: absolute;
		bottom:1em;
		right:1em;
		font-size: 0.85em;
	}

	&:hover {
		color:#efefef;
		h2 {
			text-shadow:none;
		}
		i {
			@include transform(rotate(-5deg));
		}
		a.call-to-action {
			opacity: 1;
		}
	}
}

section {
	padding:0 1.5em;
}

.pure-menu > a {
	img {
		vertical-align: text-bottom;
		margin-right:5px;
	}
}

a {
	-webkit-transition:all 0.25s ease-in-out;
	-moz-transition:all 0.25s ease-in-out;
	transition:all 0.25s ease-in-out;
	text-decoration: underline;
	color:#daf6f5;
	&:hover {
		color: #daf6f5;
	}
}

.top-header {
	min-height: 36px;
	.pure-menu {
		background:#151111;
	}
}

ul {
	margin:0.5em 0;
	list-style-type:square;
	li {
		line-height:1.75em;

	}
}

.pure-menu li a:hover {
	background: #333;
}

.top-header {
	.iconal {
		position: relative;
		height:24px;
		width:30px;
		display:block;
		text-align: center;
		padding: 5px 5px;
		&:hover {
			background:transparent;
		}
	}
	i {
		text-align: center;
		font-size:150%;
		width:30px;
	}
	a:hover {
		> i {
			font-size:200%;
			line-height:75%;
			text-shadow:-1px 1px 0px rgba(0,0,0,0.45);
		}
		> i.icon-github-sign {
			color:pink;
		}
		> i.icon-google-plus-sign {
			color:#d34836;
		}
		> i.icon-twitter-sign {
			color:#9AE4E8;
		}
		> i.icon-linkedin-sign {
			color:#4875B4;
		}
	}
}

.splashy {
	margin:1em 0 0 0;
	&.second {
		margin-top:0;
		margin-bottom: 5em;
	}
}

.readable-section {
	margin-top:2em;
	padding-top:45px;
	position:relative;
	width:50em;
	max-width:100%;
	margin:auto;
	letter-spacing:normal;
	line-height:normal;
	text-align: justify;
	p {
		text-align: justify;
		line-height:1.75em;
		margin:1.25em 0;
	}
	.images {
		padding:1em;
	}
	img {
		width:100%;
		max-width:100%;
		height:auto;
	}
	ul, ol {
		text-align: justify;
		@include box-sizing(border-box);
		padding:0 0 0 3em;
		line-height:1.75em;
	}
	li {
		margin-top:1em;
	}
}

.firefox-webapp, .firefox-btn {
	display: inline-block;
}
.firefox-webapp {
	display:none;
}

a.firefox-btn, button.firefox-btn {
	display: inline-block;
	background-color: #1793E5;
	background-image: linear-gradient(#4CB1FF, #1793E5);
	background-repeat: repeat-x;
	border-bottom-color: #1793E5;
	border-radius: 3px;
	border-bottom-width: 1px solid #1793E5;
	border-image-outset: 0 0 0 0;
	border-image-repeat: stretch stretch;
	border-image-slice: 100% 100% 100% 100%;
	border-image-source: none;
	border-image-width: 1 1 1 1;
	border-left-color: #1793E5;
	border-left-style: solid;
	border-left-width: 1px;
	border-right-color: #1793E5;
	border-right-style: solid;
	border-right-width: 1px;
	border-top-color: #1793E5;
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
	border-top-style: solid;
	border-top-width: 1px;
	bottom: 15px;
	color: #FFF;
	cursor: pointer;
	font-family: FeuraSansWeb,"Open Sans","Helvetica Neue",Arial,sans-serif;
	font-size: 13px;
	font-weight: 400;
	line-height: 16px;
	margin: 0;
	padding: 0.25em 0.75em;
	text-align: center;
	text-decoration: none;
	text-overflow: ellipsis;
	width: auto;
	&:hover {
		background-color: #1584CE;
		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2BA3FF), to(#1584CE));
		background-image: -webkit-linear-gradient(#2BA3FF, #1584CE);
		background-image: -moz-linear-gradient(#2BA3FF, #1584CE);
		background-image: -o-linear-gradient(#2BA3FF, #1584CE);
		background-image: linear-gradient(#2BA3FF, #1584CE);
	}
}

.echoplexus-frame {
	width:100%;
	height:400px;
}

small.accent {
	font-size: 50%;
	color: #daf6f5;
}

@media (max-width: 900px) {
	.pure-menu-fixed {
		position: static;
	}
	.pure-menu li a {
		font-size: 0.9em;
		padding: 5px 10px;
	}
	.readable-section {
		padding-top: 10px;
	}
}

